Hid run() prompts everywhere.

--- a/sfpmg052015.ipynb
+++ b/sfpmg052015.ipynb
@@ -60,12 +60,9 @@
     }
    },
    "source": [
+    "    $ git commit -v ./path/to/afile\n",
     "* It lets you do things\n",
-    "* It takes arguments that change how things are done\n",
-    "\n",
-    "For instance:\n",
-    "\n",
-    "    $ git commit -v ./path/to/afile"
+    "* It takes arguments that change how things are done"
    ]
   },
   {
@@ -93,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -117,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -131,7 +128,7 @@
        "'Hello world!'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -156,7 +153,7 @@
        "'Hello John!'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -193,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -207,7 +204,7 @@
        "'Hello dave!'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -271,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -285,7 +282,7 @@
        "'Hello dave!'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,16 +299,43 @@
     }
    },
    "source": [
-    "## This is how you write a command-line interface for it"
+    "## This is how you write a command-line interface for it\n",
+    "(according to the docs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {
+    "classes": "nooutput",
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "usage: greeter [-h] [--no-capitalize] [name]\n",
+      "greeter: error: unrecognized arguments: -f --profile-dir /home/epsy/.ipython/profile_default\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "2",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To exit: use 'exit', 'quit', or Ctrl-D.\n"
+     ]
+    }
+   ],
    "source": [
     "import argparse\n",
     "\n",
@@ -322,17 +346,10 @@
     "\n",
     "    args = parser.parse_args(args=args)\n",
     "\n",
-    "    print(greet(args.name, no_capitalize=args.no_capitalize))"
+    "    print(greet(args.name, no_capitalize=args.no_capitalize))\n",
+    "\n",
+    "greetcli()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -347,8 +364,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {
+    "classes": "noinput",
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
@@ -376,8 +394,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {
+    "classes": "noinput",
     "collapsed": false
    },
    "outputs": [
@@ -397,7 +416,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "notes"
     }
    },
    "source": [
@@ -467,20 +486,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {
+    "classes": "nooutput",
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/epsy/.local/lib/python3.4/site-packages/IPython/kernel/__main__.py: Unknown option '-f'\n",
+      "Usage: /home/epsy/.local/lib/python3.4/site-packages/IPython/kernel/__main__.py [OPTIONS] [name]\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "2",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To exit: use 'exit', 'quit', or Ctrl-D.\n"
+     ]
+    }
+   ],
    "source": [
-    "from clize import run"
+    "from clize import run\n",
+    "\n",
+    "run(greet)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -488,11 +535,11 @@
    "outputs": [],
    "source": [
     "from clize import run as orig_run\n",
-    "from functools import partial\n",
     "\n",
-    "def setup_args(*args):\n",
-    "    global run\n",
-    "    run = partial(orig_run, exit=False, args=args)"
+    "def rrun(*args, **kwargs):\n",
+    "    orig_run(*args, exit=False, **kwargs)\n",
+    "\n",
+    "def run(*args, **kwargs): pass"
    ]
   },
   {
@@ -508,22 +555,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "setup_args('greeter.py')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
+    "classes": "noinput",
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
@@ -539,7 +573,7 @@
     }
    ],
    "source": [
-    "run(greet)"
+    "rrun(greet, args=['greeter.py'])"
    ]
   },
   {
@@ -555,22 +589,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "setup_args('greeter.py', 'john')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
+    "classes": "noinput",
     "collapsed": false
    },
    "outputs": [
@@ -583,7 +604,7 @@
     }
    ],
    "source": [
-    "run(greet)"
+    "rrun(greet, args=['greeter.py', 'john'])"
    ]
   },
   {
@@ -599,22 +620,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "setup_args('greeter.py', 'dave', '--no-capitalize')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
+    "classes": "noinput",
     "collapsed": false
    },
    "outputs": [
@@ -627,7 +635,7 @@
     }
    ],
    "source": [
-    "run(greet)"
+    "rrun(greet, args=['greeter.py', 'dave', '--no-capitalize'])"
    ]
   },
   {
@@ -643,22 +651,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "setup_args('greeter.py', '--help')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
+    "classes": "noinput",
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
@@ -685,12 +680,12 @@
     }
    ],
    "source": [
-    "run(greet)"
+    "rrun(greet, args=['greeter.py', '--help'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false,
     "scrolled": true,
@@ -698,12 +693,43 @@
      "slide_type": "subslide"
     }
    },
+   "outputs": [],
+   "source": [
+    "def greet(name=None, *, no_capitalize=False):\n",
+    "    \"\"\"Returns a greeting for a given person or the whole world.\n",
+    "    \n",
+    "    name: The name of the person to greet\n",
+    "    \n",
+    "    no_capitalize: Don't capitalize the given name\n",
+    "    \"\"\"\n",
+    "    if name is None:\n",
+    "        return \"Hello world!\"\n",
+    "    else:\n",
+    "        if not no_capitalize:\n",
+    "            name = name.title()\n",
+    "        return \"Hello {}!\".format(name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    $ python greet.py --help"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "classes": "noinput",
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Usage: greeter.py [OPTIONS] [name]\n",
+      "Usage: greet.py [OPTIONS] [name]\n",
       "\n",
       "Returns a greeting for a given person or the whole world.\n",
       "\n",
@@ -719,21 +745,7 @@
     }
    ],
    "source": [
-    "def greet(name=None, *, no_capitalize=False):\n",
-    "    \"\"\"Returns a greeting for a given person or the whole world.\n",
-    "    \n",
-    "    name: The name of the person to greet\n",
-    "    \n",
-    "    no_capitalize: Don't capitalize the given name\n",
-    "    \"\"\"\n",
-    "    if name is None:\n",
-    "        return \"Hello world!\"\n",
-    "    else:\n",
-    "        if not no_capitalize:\n",
-    "            name = name.title()\n",
-    "        return \"Hello {}!\".format(name)\n",
-    "\n",
-    "run(greet)"
+    "rrun(greet, args=['greet.py', '--help'])"
    ]
   },
   {
@@ -756,21 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "setup_args('greet.py', 'john', '--repeat', '3')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -800,8 +798,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {
+    "classes": "noinput",
     "collapsed": false
    },
    "outputs": [
@@ -816,7 +815,7 @@
     }
    ],
    "source": [
-    "run(greet)"
+    "rrun(greet, args=['greet.py', 'john', '--repeat', '3'])"
    ]
   },
   {
@@ -832,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -861,22 +860,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "setup_args('greet.py', 'john', 'doe')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
+    "classes": "noinput",
     "collapsed": false
    },
    "outputs": [
@@ -889,7 +875,7 @@
     }
    ],
    "source": [
-    "run(greet)"
+    "rrun(greet, args=['greet.py', 'john', 'doe'])"
    ]
   },
   {
@@ -905,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -935,22 +921,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "setup_args('greet.py', 'dave', '-C')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
+    "classes": "noinput",
     "collapsed": false
    },
    "outputs": [
@@ -963,7 +936,7 @@
     }
    ],
    "source": [
-    "run(greet)"
+    "rrun(greet, args=['greet.py', 'dave', '-C'])"
    ]
   },
   {
@@ -1001,21 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "setup_args('greet.py', '--help')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -1032,6 +991,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "run(greet, part)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1040,8 +1010,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "metadata": {
+    "classes": "noinput",
     "collapsed": false
    },
    "outputs": [
@@ -1058,7 +1029,7 @@
     }
    ],
    "source": [
-    "run(greet, part)"
+    "rrun(greet, part, args=['greet.py', '--help'])"
    ]
   },
   {
@@ -1150,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -1182,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1206,20 +1177,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "setup_args('greet.py', 'greet', '-C', '-r', '3', 'dave')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -1232,8 +1189,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "metadata": {
+    "classes": "noinput",
     "collapsed": false
    },
    "outputs": [
@@ -1248,30 +1206,28 @@
     }
    ],
    "source": [
-    "run(greet)"
+    "rrun(greet, part, args=['greet.py', 'greet', '-C', '-r', '3', 'dave'])"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 37,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "setup_args('greet.py', 'greet', '--help')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "    $ python greet.py --help"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "classes": "noinput",
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -1297,7 +1253,7 @@
     }
    ],
    "source": [
-    "run(greet, part)"
+    "rrun(greet, part, args=['greet.py', 'greet', '--help'])"
    ]
   },
   {
@@ -1325,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -1355,9 +1311,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 48,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -1370,7 +1326,9 @@
     "    greetings = []\n",
     "    for name in names:\n",
     "        greetings .append('Hello {}!'.format(name))\n",
-    "    return '\\n'.join(greetings)"
+    "    return '\\n'.join(greetings)\n",
+    "\n",
+    "run(greet)"
    ]
   },
   {
@@ -1386,22 +1344,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 49,
    "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "setup_args('greet.py', 'john', '-C', 'dave', 'jane')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {
+    "classes": "noinput",
     "collapsed": false
    },
    "outputs": [
@@ -1416,21 +1361,7 @@
     }
    ],
    "source": [
-    "run(greet)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "setup_args('greet.py', '--help')"
+    "rrun(greet, args=['greet.py', 'john', '-C', 'dave', 'jane'])"
    ]
   },
   {
@@ -1446,8 +1377,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 50,
    "metadata": {
+    "classes": "noinput",
     "collapsed": false
    },
    "outputs": [
@@ -1470,7 +1402,7 @@
     }
    ],
    "source": [
-    "run(greet)"
+    "rrun(greet, args=['greet.py', '--help'])"
    ]
   },
   {
@@ -1505,10 +1437,16 @@
    },
    "source": [
     "# ``pip install --user clize==3.0b1``\n",
-    "### Yann Kaiser\n",
-    "[@YannKsr](https://twitter.com/YannKsr) - [kaiser.yann@gmail.com](mailto:kaiser.yann@gmail.com)\n",
     "\n",
-    "[Clize community on Google+](https://plus.google.com/communities/101146333300650079362)"
+    "https://clize.readthedocs.org/\n",
+    "\n",
+    "[Clize community on Google+](https://plus.google.com/communities/101146333300650079362)\n",
+    "\n",
+    "### Yann Kaiser\n",
+    "\n",
+    "[@YannKsr](https://twitter.com/YannKsr)\n",
+    "\n",
+    "[kaiser.yann@gmail.com](mailto:kaiser.yann@gmail.com)"
    ]
   },
   {
@@ -1524,7 +1462,7 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Slideshow",
+  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
