Slight adjustments, removed beta version marker.

--- a/sfpmg052015.ipynb
+++ b/sfpmg052015.ipynb
@@ -280,7 +280,7 @@
    },
    "source": [
     "* We create a parser, add arguments, parse, then call ``greet``\n",
-    "* Redundant\n",
+    "* Redundant when it's informations that's already there\n",
     "* Python makes the signature available\n",
     "* Let's use that"
    ]
@@ -667,7 +667,7 @@
     "* parameters work just like in python, so ``*args`` works\n",
     "* things like (short) parameter aliases don't exit in py, so annotation\n",
     "\n",
-    "Next: composing functions together"
+    "Next: Because we deal with functions... neat stuff!"
    ]
   },
   {
@@ -775,11 +775,13 @@
     }
    },
    "source": [
-    "# ``pip install --user clize==3.0b1``\n",
+    "# ``pip install --user clize``\n",
     "\n",
     "https://clize.readthedocs.org/\n",
     "\n",
     "[Clize community on Google+](https://plus.google.com/communities/101146333300650079362)\n",
+    "\n",
+    "http://epsy.github.io/clize/\n",
     "\n",
     "### Yann Kaiser\n",
     "\n",
@@ -796,7 +798,6 @@
     }
    },
    "source": [
-    "* Caution beta\n",
     "* Check RTD for tutorials\n",
     "* need help for FAQ page\n",
     "* will post slides link on meetup group"
