Added a quick line about myself.

--- a/sfpmg052015.ipynb
+++ b/sfpmg052015.ipynb
@@ -10,7 +10,12 @@
    "source": [
     "# Clize\n",
     "## A Python approach to command-line argument parsing\n",
-    "Yann Kaiser - [@YannKsr](https://twitter.com/YannKsr)"
+    "\n",
+    "**Yann Kaiser**\n",
+    "\n",
+    "Full-time student from France!\n",
+    "\n",
+    "[@YannKsr](https://twitter.com/YannKsr)"
    ]
   },
   {
