Added Karan Parikh to the AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -5,4 +5,5 @@ Clize is written and maintained by:
 Contributors
 ------------
 
+* Karan Parikh <karanparikh1991@gmail.com>
 * Kevin Samuel <kevin@yeleman.com>
