--- a/AUTHORS
+++ b/AUTHORS
@@ -5,5 +5,6 @@ Clize is written and maintained by:
 Contributors
 ------------
 
+* Chris Angelico <rosuav@gmail.com>
 * Karan Parikh <karanparikh1991@gmail.com>
 * Kevin Samuel <kevin@yeleman.com>
