AUTHORS: add Konstantinos Koukopoulos

--- a/AUTHORS
+++ b/AUTHORS
@@ -8,3 +8,4 @@ Contributors
 * Chris Angelico <rosuav@gmail.com>
 * Karan Parikh <karanparikh1991@gmail.com>
 * Kevin Samuel <kevin@yeleman.com>
+* Konstantinos Koukopoulos <kouk@transifex.com>
