--- a/AUTHORS
+++ b/AUTHORS
@@ -5,7 +5,11 @@ Clize is written and maintained by:
 Contributors
 ------------
 
+* Alexandre Bonnetain <Shir0kamii@gmail.com>
 * Chris Angelico <rosuav@gmail.com>
 * Karan Parikh <karanparikh1991@gmail.com>
+* Étienne BERSAC <bersace03@gmail.com>
+* Francis T. O'Donovan <francis@betteroutcomes.com>
 * Kevin Samuel <kevin@yeleman.com>
 * Konstantinos Koukopoulos <kouk@transifex.com>
+* Michael Gielda <mgielda@antmicro.com>
