--- a/AUTHORS
+++ b/AUTHORS
@@ -13,4 +13,5 @@ Contributors
 * Kevin Samuel <kevin@yeleman.com>
 * Konstantinos Koukopoulos <kouk@transifex.com>
 * Michael Gielda <mgielda@antmicro.com>
+* NODA Kai <nodakai@gmail.com>
 * Rasmus Scholer <rasmusscholer@gmail.com>
