add to contributors

--- a/AUTHORS
+++ b/AUTHORS
@@ -11,6 +11,7 @@ Contributors
 * Francis T. O'Donovan <francis@betteroutcomes.com>
 * Karan Parikh <karanparikh1991@gmail.com>
 * Kevin Samuel <kevin@yeleman.com>
+* Kian-Meng Ang <kianmeng@cpan.org>
 * Konstantinos Koukopoulos <kouk@transifex.com>
 * Michael Gielda <mgielda@antmicro.com>
 * NODA Kai <nodakai@gmail.com>
